<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_control</name>
  <version>0.0.0</version>
  <description>The wheelchair_control package</description>
  <license>BSD</license>
  <maintainer email="DVChienbkvn@gmail.com">Chien</maintainer>
  <author email="DVChienbkvn@gmail.com">Chien</author>
  <author email="qortkdrnr@naver.com">Sujin</author>
  <author email="rladkgus124@naver.com">Ahyeon</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
